--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,7 @@
     width: 300px;
     height: 350px;
     background-color: #f1f1f1;
+    border: 1px solid black;
     border-radius: 10px;
 }
 .rooth2 {
@@ -23,7 +24,7 @@
 
 #google-login {
     position: absolute;
-    top: 120px;
+    bottom: 125px;
     left: 50%;
     transform: translate(-50%);
 }
