--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,12 +10,15 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 300px;
-    height: 350px;
+    height: 150px;
     background-color: #f1f1f1;
     border: 1px solid black;
     border-radius: 10px;
 }
 .rooth2 {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
     font-size: 35px;
     text-align: center;
     font-family: "Cambria";
@@ -24,7 +27,7 @@
 
 #google-login {
     position: absolute;
-    bottom: 125px;
+    bottom: 25px;
     left: 50%;
     transform: translate(-50%);
 }
